Task5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-non-admin-pair
spec:
  podSelector:
    matchExpressions:
      - key: role
        operator: In
        values: [front-end, back-end-api]
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: role
                operator: In
                values: [front-end, back-end-api]
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - podSelector:
            matchExpressions:
              - key: role
                operator: In
                values: [front-end, back-end-api]
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-pair
spec:
  podSelector:
    matchExpressions:
      - key: role
        operator: In
        values: [admin-front-end, admin-back-end-api]
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: role
                operator: In
                values: [admin-front-end, admin-back-end-api]
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - podSelector:
            matchExpressions:
              - key: role
                operator: In
                values: [admin-front-end, admin-back-end-api]
      ports:
        - protocol: TCP
          port: 80
